Add swagger definitions
